--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -3,12 +3,8 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Console.cpp" />
-    <ClCompile Include="Fonts.cpp" />
     <ClCompile Include="FileSystem.cpp" />
-    <ClCompile Include="InputBox.cpp" />
-    <ClCompile Include="Label.cpp" />
     <ClCompile Include="ModuleAudio.cpp" />
-    <ClCompile Include="ModuleGUI.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Log.cpp" />
@@ -16,22 +12,35 @@
     <ClCompile Include="ModuleTextures.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="GUIElem.cpp" />
-    <ClCompile Include="Color.cpp" />
+    <ClCompile Include="Fonts.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="Color.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="GUIElem.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="InputBox.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="Label.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleGUI.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="App.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Globals.h" />
-    <ClInclude Include="Fonts.h" />
     <ClInclude Include="FileSystem.h" />
-    <ClInclude Include="GUIElem.h" />
-    <ClInclude Include="InputBox.h" />
-    <ClInclude Include="Label.h" />
     <ClInclude Include="ModuleAudio.h" />
-    <ClInclude Include="ModuleGUI.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="p2Defs.h" />
@@ -42,6 +51,28 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
-    <ClInclude Include="Scene.h" />
+    <ClInclude Include="Fonts.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="GUIElem.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="InputBox.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="Label.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleGUI.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="GUI">
+      <UniqueIdentifier>{59a2cb2e-c0e5-4fed-ac56-546bff2a2fc9}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
