--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,8 @@
 version: 0.{build}
+branches:
+  only:
+  - master
+  - Releases
 image: Visual Studio 2017
 build:
   verbosity: minimal
-  
-branches:
-  only: 
-    - master
-- platform: x86
-  configuration: Debug
-
