--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,13 @@ version: 0.{build}
 branches:
   only:
   - master
+  platform: x86
+  configuration: Debug
+branches:
+  only:
   - Releases
+  platform: x86
+  configuration: Release
 image: Visual Studio 2017
 build:
   verbosity: minimal
