--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,25 @@
 version: 0.{build}
-branches:
-  only:
-  - master
-  platform: x86
-  configuration: Debug
-branches:
-  only:
-  - Releases
-  platform: x86
-  configuration: Release
 image: Visual Studio 2017
+platform: x86
+configuration: Debug
 build:
   verbosity: minimal
+
+for:
+-
+  branches:
+    only:
+      - Releases
+  configuration: Release
+
+  artifacts:  
+    - path: Warcraft Heroes Beyond Time.zip
+
+  deploy:
+  - provider: GitHub
+    artifact: Warcraft Heroes Beyond Time.zip
+    draft: false
+    prerelease: false
+    on:
+      branch: Releases
+      appveyor_repo_tag: true
