--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,10 @@ for:
       - Releases
   configuration: Release
 
-  # 7zip here 
+  after_build:
+    - 7z a Warcraft Heroes Beyond Time.zip %APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*
+    - 7z a Warcraft Heroes Beyond Time.zip %APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe
+    - 7z a Warcraft Heroes Beyond Time.zip %APPVEYOR_BUILD_FOLDER%/docs/README.md
 
   artifacts:  
     - path: Warcraft Heroes Beyond Time.zip
