--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ for:
 -
   branches:
     only:
-      - Releases
+      - releases
   configuration: Release
 
   after_build:
@@ -29,7 +29,7 @@ for:
     draft: false
     prerelease: false
     on:
-      branch: Releases
+      branch: releases
 
   notifications:
       - provider: Email
