--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,11 +10,11 @@ for:
   branches:
     only:
       - releases
-  configuration: Release
+  configuration: Debug
 
   after_build:
     - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
-    - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
+    - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Debug/Warcraft Heroes Beyond Time.exe"
     - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
 
   artifacts:  
