--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: 0.{build}
 image: Visual Studio 2017
 platform: x86
-configuration: Debug
+configuration: Release
 build:
   verbosity: minimal
 
@@ -10,11 +10,11 @@ for:
   branches:
     only:
       - releases
-  configuration: Debug
+  configuration: Release
 
   after_build:
     - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
-    - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Debug/Warcraft Heroes Beyond Time.exe"
+    - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
     - 7z a "Warcraft Heroes Beyond Time.zip" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
 
   artifacts:  
@@ -28,6 +28,9 @@ for:
       secure: RmJh3KY08MINd/TWolIkLr04OXyj8QlMamglHUHHfHj1/ArjkWDbSoWNFd12JuA0
     draft: false
     prerelease: false
+    on:
+      branch: master
+      appveyor_repo_tag: true
 
   notifications:
       - provider: Email
