--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,9 @@ for:
   configuration: Release
 
   after_build:
-    - 7z a "Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
-    - 7z a "Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
-    - 7z a "Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
-    - 7z a "Warcraft_Heroes_Beyond_Time.zip" "Warcraft_Heroes_Beyond_Time"
+    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
+    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
+    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
 
   artifacts:  
     - path: "Warcraft_Heroes_Beyond_Time.zip"
