--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,10 +13,14 @@ for:
   configuration: Release
 
   after_build:
-    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
-    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
-    - 7z a "Warcraft_Heroes_Beyond_Time.zip/Warcraft_Heroes_Beyond_Time" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
-
+    - cmd: mkdir %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+    - cmd: copy "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*.*" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+    - cmd: copy "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+    - cmd: copy "%APPVEYOR_BUILD_FOLDER%/docs/README.md" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+   #- 7z a "Warcraft_Heroes_Beyond_Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Game/*"
+   #- 7z a "Warcraft_Heroes_Beyond_Time.zip" "%APPVEYOR_BUILD_FOLDER%/Warcraft Heroes Beyond Time/Release/Warcraft Heroes Beyond Time.exe"
+   #- 7z a "Warcraft_Heroes_Beyond_Time.zip" "%APPVEYOR_BUILD_FOLDER%/docs/README.md"
+    - 7z a Warcraft_Heroes_Beyond_Time.zip %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
   artifacts:  
     - path: "Warcraft_Heroes_Beyond_Time.zip"
 
