--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: 0.{build}
 image: Visual Studio 2017
 platform: x86
 configuration: Release
+skip_tags: true
 build:
   verbosity: minimal
 
