--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,9 +19,10 @@ for:
     - cmd: mkdir %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
     - cmd: copy "%APPVEYOR_BUILD_FOLDER%\Warcraft Heroes Beyond Time\Game\*.*" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
     - cmd: copy "%APPVEYOR_BUILD_FOLDER%\Warcraft Heroes Beyond Time\Release\Warcraft Heroes Beyond Time.exe" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
-    - cmd: move %APPVEYOR_BUILD_FOLDER%\docs\README.md %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+    #- cmd: move %APPVEYOR_BUILD_FOLDER%\docs\README.md %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
     - cmd: move "%APPVEYOR_BUILD_FOLDER%\LICENSE" %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
     - 7z a Warcraft_Heroes_Beyond_Time.zip %APPVEYOR_BUILD_FOLDER%\Warcraft_Heroes_Beyond_Time
+    - 7z a Warcraft_Heroes_Beyond_Time.zip %APPVEYOR_BUILD_FOLDER%\docs\README.md
     
   artifacts:  
   - path: "Warcraft_Heroes_Beyond_Time.zip"
